--- a/crates/vm/levm/bench/revm_comparison/Cargo.toml
+++ b/crates/vm/levm/bench/revm_comparison/Cargo.toml
@@ -59,3 +59,11 @@ path = "src/levm_erc20_transfer.rs"
 [[bin]]
 name = "revm_erc20_transfer"
 path = "src/revm_erc20_transfer.rs"
+
+[[bin]]
+name = "levm_erc20_approval"
+path = "src/levm_erc20_approval.rs"
+
+[[bin]]
+name = "revm_erc20_approval"
+path = "src/revm_erc20_approval.rs"
