--- a/.github/workflows/flamegraph_reporter.yaml
+++ b/.github/workflows/flamegraph_reporter.yaml
@@ -11,7 +11,7 @@ concurrency:
 
 on:
   push:
-    branches: ["main", "levm/perf/automate_flamegraph"]
+    branches: ["main"]
   workflow_dispatch:
 
 env:
