levm: benchs: ci: Install solc in workflow

--- a/.github/workflows/ci_bench_levm.yaml
+++ b/.github/workflows/ci_bench_levm.yaml
@@ -29,6 +29,9 @@ jobs:
         with:
           tool: hyperfine@1.16
 
+      - name: Install solc
+        uses: pontem-network/get-solc@master
+
       - name: Run PR benchmarks
         run: |
           cd crates/vm/levm
@@ -75,6 +78,9 @@ jobs:
         uses: taiki-e/install-action@v2
         with:
           tool: hyperfine@1.16
+
+      - name: Install solc
+        uses: pontem-network/get-solc@master
 
       - name: Run main benchmarks
         run: |
